dark mode fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -34,6 +34,12 @@
         background-color: #006466;
         margin: 2px;
     }
+
+    .navigation {
+        list-style: none;
+        margin: 0 auto;
+        max-width: 700px;
+    }
     
     .navigation li {
         display: none;
