--- a/styles/base.css
+++ b/styles/base.css
@@ -69,7 +69,7 @@ nav a:hover {
     text-align: center;
 }
 
-.main-h2-heading {
+#main h2 {
     color: #3E1F47;
     font-size: 1.5rem;
     font-family: 'Cinzel', serif;
@@ -154,7 +154,7 @@ footer p {
     text-align: center;
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 700px){
     #menu {
         display: block;
         font-size: 3rem;
@@ -175,7 +175,7 @@ footer p {
     .navigation {
         list-style: none;
         margin: 0 auto;
-        max-width: 600px;
+        max-width: 700px;
     }
     
     .navigation li {
